--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <title>Boilerpalte React App</title>
+  <title>NFT Marketplace</title>
 </head>
 
 <body>
